# jdexmd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  example.garden.toml
.circleci/: config.yml
src/: config.rs  jid.rs  line.rs  main.rs  markdown.rs  model.rs  notes.rs
