[package]
name = "jdexmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = ["issue-url", "url"] }
handlebars = { version = "6.1.0", features = ["string_helpers"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
