[package]
name = "jdexmd"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/graysonarts/jdexmd"
description = "A tool to generate a Johnny Decimal system for Obsidian and your Documents folder."
license-file = "LICENSE"
readme = "README.md"
authors = ["Grayson <grayson.llc>"]
categories = ["utilities"]
keywords = ["obsidian", "johnny-decimal", "jdex", "documents", "system"]

[dependencies]
cargo-husky = { version = "1.5.0", features = [
	"precommit-hook",
	"run-cargo-check",
	"run-cargo-clippy",
	"run-cargo-fmt",
] }
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = ["issue-url", "url"] }
expanduser = "1.2.2"
handlebars = { version = "6.1.0", features = ["string_helpers"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
